Fix text spacing in Cover

--- a/blocks/cover/__texts/cover__texts.css
+++ b/blocks/cover/__texts/cover__texts.css
@@ -1,15 +1,13 @@
 .cover__texts {
   position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  margin: 0 16px;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  padding: 0 16px;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
-  height: 100%;
   justify-content: center;
   z-index: 2;
   pointer-events: none;
